test multiple job in single workflow

--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -23,3 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo 'The triggering workflow2'
+  
+  trigger1:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo 'The trigger1 job completed'
